[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nyxproxy"
version = "1.2.0"
description = "Ferramenta de linha de comando para testar e gerenciar proxies V2Ray/Xray."
readme = "README.md"
authors = [{ name = "miguel-b-p", email = "miguelpinotty@gmail.com" }]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Internet :: Proxy Servers",
    "Environment :: Console",
    "License :: Other/Proprietary License",
]
dependencies = ["requests", "rich", "typer[all]", "urllib3", "python-dotenv"]

[project.urls]
Homepage = "https://github.com/miguel-b-p/NyxProxy"
"Bug Tracker" = "https://github.com/miguel-b-p/NyxProxy/issues"

[project.scripts]
nyxproxy = "nyxproxy.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
exclude = [".git", ".ruff_cache", ".venv", "__pycache__"]


[tool.ruff.lint]
# E = pycodestyle errors, F = Pyflakes, W = pycodestyle warnings, I = isort
# UP = pyupgrade, B = flake8-bugbear, C4 = flake8-comprehensions, A = flake8-builtins
select = ["E", "F", "W", "I", "UP", "B", "C4", "A"]

[tool.ruff.format]
quote-style = "double"
