[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nyxproxy"
version = "1.3.0"
description = "NyxProxy is a Python CLI that loads V2Ray/Xray proxy lists, validates connectivity and latency in parallel, applies geolocation via FindIP, and initiates local HTTP bridges with Xray-core. It also automates usage with proxychains, exports approved proxies, and reuses results through a smart cache."
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
    "proxy",
    "v2ray",
    "xray",
    "cli",
    "http",
    "proxychains",
    "findip",
    "automation",
    "privacy",
]
authors = [
    { name = "miguel-b-p", email = "miguelpinotty@gmail.com" },
    { name = "Gameriano1", email = "leoni.frazao.oliveira@gmail.com" },
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Internet :: Proxy Servers",
    "Environment :: Console",
    "License :: Other/Proprietary License",
]
dependencies = ["httpx", "rich", "typer[all]", "urllib3", "python-dotenv"]

[project.urls]
Homepage = "https://github.com/miguel-b-p/NyxProxy"
"Bug Tracker" = "https://github.com/miguel-b-p/NyxProxy/issues"

[project.scripts]
nyxproxy = "nyxproxy.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
exclude = [".git", ".ruff_cache", ".venv", "__pycache__"]


[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "A"]

[tool.ruff.format]
quote-style = "double"
